@@ -95,6 +95,10 @@ glibc (2.21-0experimental1) UNRELEASED; urgency=medium
   [ Matthias Klose ]
   * Fix multilib enabled stage1 cross builds (closes: #766877).
 
+  [ Aurelien Jarno ]
+  * Create source tarball in a deterministic manner: adjust file modification
+    time, user, group, permissions, and file order (addresses: #783210).
+
  -- Samuel Thibault <sthibault@debian.org>  Fri, 20 Mar 2015 12:30:54 +0000
 
 glibc (2.21-0experimental0) experimental; urgency=medium
